@@ -12,6 +12,8 @@ xx-xx-2012 - 2.0.beta3
 ======================
 New features / Issues resolved
 ------------------------------
+Long(ish) findings now render with a more link that allows you to expand the
+the finding, causing the findigns table to generally dispaly more compact
 
 Bigs fixed (tickets closed):
 ----------------------------
@@ -19,6 +21,8 @@ Bigs fixed (tickets closed):
 https://sourceforge.net/apps/trac/seccubus/ticket/62
 67 - Links in top right of UI do nothing
 https://sourceforge.net/apps/trac/seccubus/ticket/67
+71 - Scan result should "window shade" in the UI to hide lengthy text
+https://sourceforge.net/apps/trac/seccubus/ticket/71
 
 17-01-2012 - 2.0.beta2
 ======================
